--- a/around-web/package.json
+++ b/around-web/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.16.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "0.9.5"
   },
   "devDependencies": {},
