--- a/around-web/package.json
+++ b/around-web/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "antd": "^3.16.6",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-grid-gallery": "^0.5.4",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "0.9.5"
+    "react-scripts": "^3.0.0"
   },
   "devDependencies": {},
   "scripts": {
@@ -15,5 +17,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
