--- a/around-web/package.json
+++ b/around-web/package.json
@@ -7,6 +7,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-maps": "^9.4.5",
     "react-grid-gallery": "^0.5.4",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.0.0"
